# junkcode

./: .clang-format  .gitignore  .gitmodules  README.md  StartupTask.cs  calculator.rs  fabfile.py  fib_tail.scala  find-git  gifme.py  json.rs  move_last.c  nlp.py  raytracer.py  stdlib.py  tasks.py  thread_sum.rs  time_this_week.py  tom_candy_ranking.cpp  triplet2.cpp  validate_parens.cpp
.github/workflows/: c_playground_ci.yml  ci.yml  cpp_playground_ci.yml  python_playground.yml  python_playground_ci.yml  rust_playground.yml  rust_playground_ci.yml
c-playground/: CMakeLists.txt  signal_test.c
c-playground/docker/linux/: Dockerfile
c-playground/src/: CMakeLists.txt  test_suites.h
c-playground/src/base/: test_main.c
c_playground/: CMakeLists.txt  Makefile  README.md  tasks.py
c_playground/dependencies/: CMakeLists.txt
c_playground/docker/linux/: Dockerfile
c_playground/src/: CMakeLists.txt  endian.c  move_last.c  signal.c  test_suites.h
c_playground/src/base/: test_main.c
cpp-playground/: CMakeLists.txt  Makefile  README.md  async.cpp  triplet1.cpp  validate_parens.cpp
cpp-playground/dependencies/: CMakeLists.txt
cpp-playground/docker/linux/: Dockerfile
cpp-playground/src/: CMakeLists.txt  async.cpp  swap_without_temp.cpp  validate_parens.cpp
cpp_playground/: CMakeLists.txt  tasks.py
cpp_playground/src/: CMakeLists.txt
cpp_rust/: CMakeLists.txt  tasks.py
cpp_rust/libs/: CMakeLists.txt
cpp_rust/libs/cpprust/: CMakeLists.txt  Cargo.toml
cpp_rust/libs/cpprust/include/cpprust/: blobstore.hpp
cpp_rust/libs/cpprust/src/: blobstore.cpp  blobstore_test.cpp  bridge.rs
cpp_rust/libs/cpprustmain/: CMakeLists.txt
cpp_rust/libs/cpprustmain/src/: main.cpp
deep_sea_research/: README.md  download.sh
gitnetcode/: README.md  gitnetcode.py  gitnetcode_test.py
imessage-backup/: imessagebackup.sh
lex-yacc/: example1  example2  example3  example3.l  example4  example4.l  example4.y  example5  example5.l  example5.y  example6  example6.l  example6.y  lex.yy.c  y.tab.c
lisp/: music_database.lisp
macos-scripts/: toggle-caffeine.scpt
pip_e_proj/: README.md  x.py
pip_e_proj/xtask/: pyproject.toml  setup.cfg
pip_e_proj/xtask/xtask/: __init__.py  fmt.py  lint.py  location.py
python-playground/: Makefile  Pipfile  README.md  google_fire_demo.py  mypy_test.py  reverse_map.py  setup.cfg  speller.py
python-playground/src/: nlp_test.py  piglatin_test.py  stdlib_test.py
python_playground/: Pipfile  README.md  setup.cfg  tasks.py
python_playground/src/: mypy_test.py  nlp_test.py  stdlib_test.py
rust-playground/: Cargo.toml  README.md
rust_playground/: Cargo.toml  README.md  tasks.py
rust_playground/src/: std.rs
tmux/sessions/: dancingtogether
tools/scripts/: install_deps_linux.sh  run_task_in_venv.sh
