[package]
name = "cpprust"
version = "0.1.0"
authors = ["Bob Gardner <bob.hn.gardner@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib", "staticlib"]

[dependencies]
cxx = "1.0.12"

[build-dependencies]
cxx-build = "1.0.12"
